testsuite/tests/contrib/lkt_semantic/test.out
Resolving test.lkt
==================
Id   <RefId "A" test.lkt:2:21-2:22>
     references <ClassDecl "A" test.lkt:1:12-26:2>

Id   <RefId "self" test.lkt:2:25-2:29>
     references <SelfDecl "self" test.lkt:1:12-26:2>

Expr <RefId "self" test.lkt:2:25-2:29>
     has type <ClassDecl "A" test.lkt:1:12-26:2>

Id   <RefId "Int" test.lkt:4:21-4:24>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:4:27-4:29>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "A" test.lkt:6:29-6:30>
     references <ClassDecl "A" test.lkt:1:12-26:2>

test.lkt:6:33: error: Mismatched types: expected `A`, got a number literal
5 |     fun test_int_invalid(): A = 12
  |                                 ^^

Id   <RefId "Int" test.lkt:8:25-8:28>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:8:31-8:33>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:8:36-8:38>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <BinOp test.lkt:8:31-8:38>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:10:35-10:38>
     references <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:10:41: error: Mismatched types: expected `Int`, got a string literal
 9 |     fun test_int_add_invalid_1(): Int = "12" + 15
   |                                         ^^^^     

Expr <NumLit test.lkt:10:48-10:50>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <BinOp test.lkt:10:41-10:50>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:12:35-12:38>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:12:41-12:43>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "self" test.lkt:12:46-12:50>
     references <SelfDecl "self" test.lkt:1:12-26:2>

test.lkt:12:46: error: Mismatched types: expected `Int`, got `A`
11 |     fun test_int_add_invalid_2(): Int = 15 + self
   |                                              ^^^^

Expr <BinOp test.lkt:12:41-12:50>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "A" test.lkt:14:35-14:36>
     references <ClassDecl "A" test.lkt:1:12-26:2>

test.lkt:14:39: error: Mismatched types: expected `A`, got a number literal
13 |     fun test_int_add_invalid_3(): A = 15 + self
   |                                       ^^       

Id   <RefId "self" test.lkt:14:44-14:48>
     references <SelfDecl "self" test.lkt:1:12-26:2>

Expr <RefId "self" test.lkt:14:44-14:48>
     has type <ClassDecl "A" test.lkt:1:12-26:2>

Expr <BinOp test.lkt:14:39-14:48>
     has type <ClassDecl "A" test.lkt:1:12-26:2>

Id   <RefId "Regexp" test.lkt:16:26-16:32>
     references <StructDecl "Regexp" __prelude:5:10-5:26>

Expr <StringLit test.lkt:16:35-16:43>
     has type <StructDecl "Regexp" __prelude:5:10-5:26>

Id   <RefId "Regexp" test.lkt:18:26-18:32>
     references <StructDecl "Regexp" __prelude:5:10-5:26>

Expr <StringLit test.lkt:19:18-19:26>
     has type <StructDecl "Regexp" __prelude:5:10-5:26>

Id   <RefId "rg" test.lkt:20:9-20:11>
     references <ValDecl "rg" test.lkt:19:9-19:26>

Expr <RefId "rg" test.lkt:20:9-20:11>
     has type <StructDecl "Regexp" __prelude:5:10-5:26>

Expr <BlockExpr test.lkt:18:35-21:6>
     has type <StructDecl "Regexp" __prelude:5:10-5:26>

Id   <RefId "Int" test.lkt:23:22-23:25>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "true" test.lkt:23:31-23:35>
     references <EnumLitDecl "true" __prelude:6:28-6:32>

Expr <RefId "true" test.lkt:23:31-23:35>
     has type <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Expr <NumLit test.lkt:23:41-23:42>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:23:48-23:49>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <IfExpr test.lkt:23:28-23:49>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:25:30-25:33>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "true" test.lkt:25:39-25:43>
     references <EnumLitDecl "true" __prelude:6:28-6:32>

Expr <RefId "true" test.lkt:25:39-25:43>
     has type <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Expr <NumLit test.lkt:25:49-25:50>
     has type <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:25:56: error: Mismatched types: expected `Int`, got a string literal
24 |     fun test_if_invalid_1(): Int = if true then 1 else "2"
   |                                                        ^^^

Expr <IfExpr test.lkt:25:36-25:59>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "C" test.lkt:29:9-29:10>
     references <GenericFormalTypeDecl "C" test.lkt:28:10-28:11>

Id   <RefId "C" test.lkt:30:9-30:10>
     references <GenericFormalTypeDecl "C" test.lkt:28:10-28:11>

Id   <RefId "C" test.lkt:34:9-34:10>
     references <GenericFormalTypeDecl "C" test.lkt:33:10-33:11>

Id   <RefId "D" test.lkt:35:9-35:10>
     references <GenericFormalTypeDecl "D" test.lkt:33:13-33:14>

Id   <RefId "C" test.lkt:37:17-37:18>
     references <GenericFormalTypeDecl "C" test.lkt:33:10-33:11>

Id   <RefId "A" test.lkt:40:11-40:12>
     references <ClassDecl "A" test.lkt:1:12-26:2>

Id   <RefId "Pair" test.lkt:41:37-41:41>
     references <GenericDecl "Pair" test.lkt:28:1-31:2>

Id   <RefId "Int" test.lkt:41:42-41:45>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Pair" test.lkt:41:49-41:53>
     references <GenericDecl "Pair" test.lkt:28:1-31:2>

Id   <RefId "Int" test.lkt:41:54-41:57>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:41:59-41:61>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:41:63-41:65>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:41:49-41:66>
     has type <InstantiatedGenericType "Pair[Int]" test.lkt:28:1-31:2>

Id   <RefId "Int" test.lkt:42:42-42:45>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Pair" test.lkt:42:48-42:52>
     references <GenericDecl "Pair" test.lkt:28:1-31:2>

Id   <RefId "Int" test.lkt:42:53-42:56>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:42:58-42:60>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:42:63-42:65>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:42:48-42:66>
     has type <InstantiatedGenericType "Pair[Int]" test.lkt:28:1-31:2>

Id   <RefId "a" test.lkt:42:67-42:68>
     references <FieldDecl "a" test.lkt:29:5-29:10>

Expr <RefId "a" test.lkt:42:67-42:68>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <DotExpr test.lkt:42:48-42:68>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Pair" test.lkt:43:38-43:42>
     references <GenericDecl "Pair" test.lkt:28:1-31:2>

Id   <RefId "Int" test.lkt:43:43-43:46>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Pair" test.lkt:43:50-43:54>
     references <GenericDecl "Pair" test.lkt:28:1-31:2>

Id   <RefId "Int" test.lkt:43:55-43:58>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:43:60-43:62>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:43:64-43:66>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:43:50-43:67>
     has type <InstantiatedGenericType "Pair[Int]" test.lkt:28:1-31:2>

Id   <RefId "a" test.lkt:43:68-43:69>
     references <FieldDecl "a" test.lkt:29:5-29:10>

Expr <RefId "a" test.lkt:43:68-43:69>
     has type <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:43:50: error: Mismatched types: expected `Pair[Int]`, got `Int`
42 |     fun test_invalid_generic_type(): Pair[Int] = Pair[Int](12, 15).a
   |                                                  ^^^^^^^^^^^^^^^^^^^

Id   <RefId "Bool" test.lkt:44:44-44:48>
     references <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Id   <RefId "Tuple2" test.lkt:44:51-44:57>
     references <GenericDecl "Tuple2" test.lkt:33:1-38:2>

Id   <RefId "Int" test.lkt:44:58-44:61>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Bool" test.lkt:44:63-44:67>
     references <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Expr <NumLit test.lkt:44:69-44:71>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "true" test.lkt:44:73-44:77>
     references <EnumLitDecl "true" __prelude:6:28-6:32>

Expr <RefId "true" test.lkt:44:73-44:77>
     has type <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Expr <CallExpr test.lkt:44:51-44:78>
     has type <InstantiatedGenericType "Tuple2[Int, Bool]" test.lkt:33:1-38:2>

Id   <RefId "b" test.lkt:44:79-44:80>
     references <FieldDecl "b" test.lkt:35:5-35:10>

Expr <RefId "b" test.lkt:44:79-44:80>
     has type <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Expr <DotExpr test.lkt:44:51-44:80>
     has type <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Id   <RefId "Tuple2" test.lkt:45:40-45:46>
     references <GenericDecl "Tuple2" test.lkt:33:1-38:2>

Id   <RefId "Int" test.lkt:45:47-45:50>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Bool" test.lkt:45:52-45:56>
     references <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Id   <RefId "true" test.lkt:45:60-45:64>
     references <EnumLitDecl "true" __prelude:6:28-6:32>

test.lkt:45:60: error: Mismatched types: expected `Tuple2[Int, Bool]`, got `Bool`
44 |     fun test_invalid_generic_type_2(): Tuple2[Int, Bool] = true
   |                                                            ^^^^

Id   <RefId "A" test.lkt:46:29-46:30>
     references <ClassDecl "A" test.lkt:1:12-26:2>

Id   <RefId "Int" test.lkt:46:33-46:36>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "arg" test.lkt:46:39-46:42>
     references <FunArgDecl "arg" test.lkt:46:23-46:30>

Expr <RefId "arg" test.lkt:46:39-46:42>
     has type <ClassDecl "A" test.lkt:1:12-26:2>

Id   <RefId "test_int_add" test.lkt:46:43-46:55>
     references <FunDecl "test_int_add" test.lkt:8:5-8:38>

Expr <RefId "test_int_add" test.lkt:46:43-46:55>
     has type <FunctionType "(A) -> Int" __prelude>

Expr <DotExpr test.lkt:46:39-46:55>
     has type <FunctionType "(A) -> Int" __prelude>

Expr <CallExpr test.lkt:46:39-46:57>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Tuple2" test.lkt:47:30-47:36>
     references <GenericDecl "Tuple2" test.lkt:33:1-38:2>

Id   <RefId "Int" test.lkt:47:37-47:40>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Bool" test.lkt:47:42-47:46>
     references <EnumTypeDecl "Bool" __prelude:6:10-6:36>

Id   <RefId "Int" test.lkt:47:50-47:53>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "arg" test.lkt:47:56-47:59>
     references <FunArgDecl "arg" test.lkt:47:25-47:47>

Expr <RefId "arg" test.lkt:47:56-47:59>
     has type <InstantiatedGenericType "Tuple2[Int, Bool]" test.lkt:33:1-38:2>

Id   <RefId "test" test.lkt:47:60-47:64>
     references <FunDecl "test" test.lkt:37:5-37:18>

Expr <RefId "test" test.lkt:47:60-47:64>
     has type <FunctionType "(Tuple2) -> Int" __prelude>

Expr <DotExpr test.lkt:47:56-47:64>
     has type <FunctionType "(Tuple2) -> Int" __prelude>

Expr <CallExpr test.lkt:47:56-47:66>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Array" test.lkt:48:34-48:39>
     references <GenericDecl "Array" __prelude:13:10-14:2>

Id   <RefId "Int" test.lkt:48:40-48:43>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:48:47-48:50>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "arg" test.lkt:48:53-48:56>
     references <FunArgDecl "arg" test.lkt:48:29-48:44>

Expr <RefId "arg" test.lkt:48:53-48:56>
     has type <InstantiatedGenericType "Array[Int]" __prelude:13:10-14:2>

Expr <NumLit test.lkt:48:58-48:60>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:48:53-48:61>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:51:9-51:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:51:15-51:17>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:55:41-55:44>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "self" test.lkt:55:47-55:51>
     references <SelfDecl "self" test.lkt:53:1-56:2>

Expr <RefId "self" test.lkt:55:47-55:51>
     has type <StructDecl "Foo" test.lkt:53:1-56:2>

test.lkt:55:52: error: Cannot find entity `a` in this scope
54 |     fun test_identifier_leak_invalid(): Int = self.a
   |                                                    ^

Id   <RefId "D" test.lkt:59:16-59:17>
     references <EnumClassAltDecl "D" test.lkt:58:15-58:16>

Id   <RefId "Int" test.lkt:63:14-63:17>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:63:23-63:26>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:63:29-63:32>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "a" test.lkt:63:35-63:36>
     references <FunArgDecl "a" test.lkt:63:10-63:17>

Expr <RefId "a" test.lkt:63:35-63:36>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "b" test.lkt:63:39-63:40>
     references <FunArgDecl "b" test.lkt:63:19-63:26>

Expr <RefId "b" test.lkt:63:39-63:40>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <BinOp test.lkt:63:35-63:40>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:64:16-64:19>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:64:21-64:24>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:64:29-64:32>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "add" test.lkt:64:35-64:38>
     references <FunDecl "add" test.lkt:63:1-63:40>

Expr <RefId "add" test.lkt:64:35-64:38>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Id   <RefId "B" test.lkt:65:24-65:25>
     references <ClassDecl "B" test.lkt:40:1-49:2>

Id   <RefId "B" test.lkt:65:29-65:30>
     references <ClassDecl "B" test.lkt:40:1-49:2>

Id   <RefId "Int" test.lkt:65:35-65:38>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "b_inst" test.lkt:65:41-65:47>
     references <FunArgDecl "b_inst" test.lkt:65:16-65:25>

Expr <RefId "b_inst" test.lkt:65:41-65:47>
     has type <ClassDecl "B" test.lkt:40:1-49:2>

Id   <RefId "test_generic_component_access" test.lkt:65:48-65:77>
     references <FunDecl "test_generic_component_access" test.lkt:42:5-42:68>

Expr <RefId "test_generic_component_access" test.lkt:65:48-65:77>
     has type <FunctionType "(B) -> Int" __prelude>

Expr <DotExpr test.lkt:65:41-65:77>
     has type <FunctionType "(B) -> Int" __prelude>

Id   <RefId "B" test.lkt:66:32-66:33>
     references <ClassDecl "B" test.lkt:40:1-49:2>

Id   <RefId "B" test.lkt:66:37-66:38>
     references <ClassDecl "B" test.lkt:40:1-49:2>

Id   <RefId "Int" test.lkt:66:43-66:46>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "b_inst" test.lkt:66:49-66:55>
     references <FunArgDecl "b_inst" test.lkt:66:24-66:33>

Expr <RefId "b_inst" test.lkt:66:49-66:55>
     has type <ClassDecl "B" test.lkt:40:1-49:2>

Id   <RefId "test_fun_call" test.lkt:66:56-66:69>
     references <FunDecl "test_fun_call" test.lkt:46:5-46:57>

Expr <RefId "test_fun_call" test.lkt:66:56-66:69>
     has type <FunctionType "(B, A) -> Int" __prelude>

test.lkt:66:49: error: Mismatched types: expected `(B) -> Int`, got `(B, A) -> Int`
65 | fun get_method_invalid(b_inst: B): (B) -> Int = b_inst.test_fun_call
   |                                                 ^^^^^^^^^^^^^^^^^^^^

Id   <RefId "ASTList" test.lkt:70:28-70:35>
     references <GenericDecl "ASTList" __prelude:15:10-16:2>

Id   <RefId "String" test.lkt:70:36-70:42>
     references <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "Int" test.lkt:70:46-70:49>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "self" test.lkt:70:52-70:56>
     references <FunArgDecl "self" test.lkt:70:22-70:43>

Expr <RefId "self" test.lkt:70:52-70:56>
     has type <InstantiatedGenericType "ASTList[String]" __prelude:15:10-16:2>

Id   <RefId "length" test.lkt:70:57-70:63>
     references <FunDecl "length" test.lkt:86:14-86:31>

Expr <RefId "length" test.lkt:70:57-70:63>
     has type <FunctionType "(Sized) -> Int" __prelude>

Expr <DotExpr test.lkt:70:52-70:63>
     has type <FunctionType "(Sized) -> Int" __prelude>

Expr <CallExpr test.lkt:70:52-70:65>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Array" test.lkt:71:26-71:31>
     references <GenericDecl "Array" __prelude:13:10-14:2>

Id   <RefId "String" test.lkt:71:32-71:38>
     references <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "Int" test.lkt:71:42-71:45>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "self" test.lkt:71:48-71:52>
     references <FunArgDecl "self" test.lkt:71:20-71:39>

Expr <RefId "self" test.lkt:71:48-71:52>
     has type <InstantiatedGenericType "Array[String]" __prelude:13:10-14:2>

Id   <RefId "length" test.lkt:71:53-71:59>
     references <FunDecl "length" test.lkt:86:14-86:31>

Expr <RefId "length" test.lkt:71:53-71:59>
     has type <FunctionType "(Sized) -> Int" __prelude>

Expr <DotExpr test.lkt:71:48-71:59>
     has type <FunctionType "(Sized) -> Int" __prelude>

Expr <CallExpr test.lkt:71:48-71:61>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "ASTList" test.lkt:72:33-72:40>
     references <GenericDecl "ASTList" __prelude:15:10-16:2>

Id   <RefId "String" test.lkt:72:41-72:47>
     references <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "String" test.lkt:72:51-72:57>
     references <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "self" test.lkt:72:60-72:64>
     references <FunArgDecl "self" test.lkt:72:27-72:48>

Expr <RefId "self" test.lkt:72:60-72:64>
     has type <InstantiatedGenericType "ASTList[String]" __prelude:15:10-16:2>

Expr <NumLit test.lkt:72:66-72:68>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:72:60-72:69>
     has type <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "ASTList" test.lkt:80:30-80:37>
     references <GenericDecl "ASTList" __prelude:15:10-16:2>

Id   <RefId "String" test.lkt:80:38-80:44>
     references <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "String" test.lkt:80:48-80:54>
     references <StructDecl "String" __prelude:3:10-3:26>

test.lkt:80:57: error: Cannot find entity `self` in this scope
79 | fun test_astlist_indexing(a: ASTList[String]): String = self (12)
   |                                                         ^^^^     

Id   <RefId "Int" test.lkt:86:28-86:31>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:90:35-90:38>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "T" test.lkt:90:41-90:42>
     references <GenericFormalTypeDecl "T" test.lkt:89:10-89:11>

Id   <RefId "Sized" test.lkt:93:34-93:39>
     references <TraitDecl "Sized" test.lkt:85:1-87:2>

Id   <RefId "Indexable" test.lkt:93:41-93:50>
     references <GenericDecl "Indexable" test.lkt:89:1-91:2>

Id   <RefId "T" test.lkt:93:51-93:52>
     references <GenericFormalTypeDecl "T" test.lkt:93:10-93:11>

Id   <RefId "Vec" test.lkt:96:9-96:12>
     references <GenericDecl "Vec" test.lkt:93:1-94:2>

Id   <RefId "String" test.lkt:96:13-96:19>
     references <StructDecl "String" __prelude:3:10-3:26>

Expr <NullLit test.lkt:96:23-96:27>
     has type <InstantiatedGenericType "Vec[String]" test.lkt:93:1-94:2>

Id   <RefId "Int" test.lkt:97:9-97:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "a" test.lkt:97:15-97:16>
     references <ValDecl "a" test.lkt:96:1-96:27>

Expr <RefId "a" test.lkt:97:15-97:16>
     has type <InstantiatedGenericType "Vec[String]" test.lkt:93:1-94:2>

Id   <RefId "length" test.lkt:97:17-97:23>
     references <FunDecl "length" test.lkt:86:14-86:31>

Expr <RefId "length" test.lkt:97:17-97:23>
     has type <FunctionType "(Sized) -> Int" __prelude>

Expr <DotExpr test.lkt:97:15-97:23>
     has type <FunctionType "(Sized) -> Int" __prelude>

Expr <CallExpr test.lkt:97:15-97:25>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "String" test.lkt:98:9-98:15>
     references <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "a" test.lkt:98:18-98:19>
     references <ValDecl "a" test.lkt:96:1-96:27>

Expr <RefId "a" test.lkt:98:18-98:19>
     has type <InstantiatedGenericType "Vec[String]" test.lkt:93:1-94:2>

Expr <NumLit test.lkt:98:21-98:22>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:98:18-98:23>
     has type <StructDecl "String" __prelude:3:10-3:26>

Id   <RefId "Int" test.lkt:102:30-102:33>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:102:36-102:39>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "a" test.lkt:102:42-102:43>
     references <FunArgDecl "a" test.lkt:102:27-102:33>

Expr <RefId "a" test.lkt:102:42-102:43>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:103:10-103:13>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "test_named_parameters" test.lkt:103:16-103:37>
     references <FunDecl "test_named_parameters" test.lkt:102:1-102:43>

Expr <RefId "test_named_parameters" test.lkt:103:16-103:37>
     has type <FunctionType "(Int) -> Int" __prelude>

Id   <RefId "a" test.lkt:103:38-103:39>
     references <FunArgDecl "a" test.lkt:102:27-102:33>

Expr <RefId "a" test.lkt:103:38-103:39>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:103:40-103:42>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:103:16-103:43>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "EnClass" test.lkt:110:21-110:28>
     references <EnumClassDecl "EnClass" test.lkt:108:1-108:56>

Id   <RefId "SubclassB" test.lkt:110:29-110:38>
     references <EnumClassAltDecl "SubclassB" test.lkt:108:32-108:41>

Id   <RefId "EnClass" test.lkt:110:41-110:48>
     references <EnumClassDecl "EnClass" test.lkt:108:1-108:56>

Id   <RefId "SubclassB" test.lkt:110:49-110:58>
     references <EnumClassAltDecl "SubclassB" test.lkt:108:32-108:41>

Expr <CallExpr test.lkt:110:41-110:60>
     has type <EnumClassAltDecl "SubclassB" test.lkt:108:32-108:41>

test.lkt:112:24: error: Cannot find entity `SubclassB` in this scope
111 | val invalid_en_class : SubclassB = SubclassB()
    |                        ^^^^^^^^^              

test.lkt:112:36: error: Cannot find entity `SubclassB` in this scope
111 | val invalid_en_class : SubclassB = SubclassB()
    |                                    ^^^^^^^^^  

Id   <RefId "Int" test.lkt:116:13-116:16>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:116:21-116:24>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:116:27-116:30>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "a" test.lkt:116:33-116:34>
     references <FunArgDecl "a" test.lkt:116:10-116:16>

Expr <RefId "a" test.lkt:116:33-116:34>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "b" test.lkt:116:37-116:38>
     references <FunArgDecl "b" test.lkt:116:18-116:24>

Expr <RefId "b" test.lkt:116:37-116:38>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <BinOp test.lkt:116:33-116:38>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:118:9-118:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "test" test.lkt:118:15-118:19>
     references <FunDecl "test" test.lkt:116:1-116:38>

Expr <RefId "test" test.lkt:118:15-118:19>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Expr <NumLit test.lkt:118:20-118:22>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:118:24-118:26>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:118:15-118:27>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:119:9-119:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:119:15: error: No value for parameter `b` in call to `test`
118 | val u : Int = test(12) # Missing params
    |               ^^^^^^^^                 

Id   <RefId "test" test.lkt:119:15-119:19>
     references <FunDecl "test" test.lkt:116:1-116:38>

Expr <RefId "test" test.lkt:119:15-119:19>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Expr <NumLit test.lkt:119:20-119:22>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:119:15-119:23>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:120:9-120:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:120:15: error: No value for parameter `a` in call to `test`
119 | val v : Int = test(b=12) # Missing params in call with kwargs
    |               ^^^^^^^^^^                                     

Id   <RefId "test" test.lkt:120:15-120:19>
     references <FunDecl "test" test.lkt:116:1-116:38>

Expr <RefId "test" test.lkt:120:15-120:19>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Id   <RefId "b" test.lkt:120:20-120:21>
     references <FunArgDecl "b" test.lkt:116:18-116:24>

Expr <RefId "b" test.lkt:120:20-120:21>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:120:22-120:24>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:120:15-120:25>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:121:9-121:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:121:28: error: Unmatched actual in call to `test`
120 | val x : Int = test(12, 15, 17) # Too many params
    |                            ^^                   

Id   <RefId "test" test.lkt:121:15-121:19>
     references <FunDecl "test" test.lkt:116:1-116:38>

Expr <RefId "test" test.lkt:121:15-121:19>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Expr <NumLit test.lkt:121:20-121:22>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:121:24-121:26>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:121:15-121:31>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:122:9-122:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:122:31: error: Unmatched actual in call to `test`
121 | val y : Int = test(a=1, b=12, c=15) # Too many params kwargs
    |                               ^^^^                          

Id   <RefId "test" test.lkt:122:15-122:19>
     references <FunDecl "test" test.lkt:116:1-116:38>

Expr <RefId "test" test.lkt:122:15-122:19>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Id   <RefId "a" test.lkt:122:20-122:21>
     references <FunArgDecl "a" test.lkt:116:10-116:16>

Expr <RefId "a" test.lkt:122:20-122:21>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:122:22-122:23>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "b" test.lkt:122:25-122:26>
     references <FunArgDecl "b" test.lkt:116:18-116:24>

Expr <RefId "b" test.lkt:122:25-122:26>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:122:27-122:29>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <CallExpr test.lkt:122:15-122:36>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "Int" test.lkt:123:9-123:12>
     references <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:123:31: error: Unmatched actual in call to `test`
122 | val z : Int = test(a=1, b=12, c=foo)
    |                               ^^^^^ 

Id   <RefId "test" test.lkt:123:15-123:19>
     references <FunDecl "test" test.lkt:116:1-116:38>

Expr <RefId "test" test.lkt:123:15-123:19>
     has type <FunctionType "(Int, Int) -> Int" __prelude>

Id   <RefId "a" test.lkt:123:20-123:21>
     references <FunArgDecl "a" test.lkt:116:10-116:16>

Expr <RefId "a" test.lkt:123:20-123:21>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:123:22-123:23>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Id   <RefId "b" test.lkt:123:25-123:26>
     references <FunArgDecl "b" test.lkt:116:18-116:24>

Expr <RefId "b" test.lkt:123:25-123:26>
     has type <StructDecl "Int" __prelude:1:10-1:23>

Expr <NumLit test.lkt:123:27-123:29>
     has type <StructDecl "Int" __prelude:1:10-1:23>

test.lkt:123:33: error: Cannot find entity `foo` in this scope
122 | val z : Int = test(a=1, b=12, c=foo)
    |                                 ^^^ 

Expr <CallExpr test.lkt:123:15-123:37>
     has type <StructDecl "Int" __prelude:1:10-1:23>

